--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,5 +1,8 @@
 <div class="w-75 mx-auto py-4">
     <h4>Register Now : </h4>
+    <div *ngIf="apiError" class="alert alert-danger">
+        {{apiError}}
+    </div>
     <form (ngSubmit)="handleRegister(registerForm)" [formGroup]="registerForm">
 
         <!--<h2>{{ registerForm.get('name')?.getError('minlength') | json }}</h2>-->
@@ -40,6 +43,9 @@
             <p *ngIf="registerForm.get('phone')?.getError('required')" class="m-0"> phone is Required</p>
         </div>
 
-        <button [disabled]="registerForm.invalid" type="submit" class="btn btn-info">Register</button>
+        <button [disabled]="registerForm.invalid" type="submit" class="btn btn-info">
+                <i *ngIf="isLoading" class="fas fa-spinner fa-spin"></i>
+                <span *ngIf="!isLoading">Register</span>
+        </button>
     </form>
 </div>
