--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="w-75 mx-auto py-4">
+    <h4>Register Now : </h4>
+    <div *ngIf="apiError" class="alert alert-danger">
+        {{apiError}}
+    </div>
+    <form (ngSubmit)="handleLogin(loginForm)" [formGroup]="loginForm">
+
+        <!--<h2>{{ registerForm.get('name')?.getError('minlength') | json }}</h2>-->
+
+        <label for="email">email : </label>
+        <input formControlName="email" type="email" class="form-control mb-2" id="email">
+        <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched" class="alert alert-danger">
+            <p *ngIf="loginForm.get('email')?.getError('email')" class="m-0">Email InValid</p>
+            <p *ngIf="loginForm.get('email')?.getError('required')" class="m-0">Email is Required</p>
+        </div>
+
+        <label for="password">password : </label>
+        <input formControlName="password" type="password" class="form-control mb-2" id="password">
+        <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched" class="alert alert-danger">
+            <p *ngIf="loginForm.get('password')?.getError('pattern')" class="m-0"> password must start with upperCase then from 5 to 10 </p>
+            <p *ngIf="loginForm.get('password')?.getError('required')" class="m-0">password is Required</p>
+        </div>
+
+        <button [disabled]="loginForm.invalid" type="submit" class="btn btn-info">
+                <i *ngIf="isLoading" class="fas fa-spinner fa-spin"></i>
+                <span *ngIf="!isLoading">Login</span>
+        </button>
+    </form>
+</div>
