--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="w-75 mx-auto py-4">
-    <h4>Register Now : </h4>
+    <h4>Login: </h4>
     <div *ngIf="apiError" class="alert alert-danger">
         {{apiError}}
     </div>
