--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,23 +2,27 @@
     class="navbar navbar-expand-sm navbar-light bg-light"
 >
     <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand text-main fw-bold h1" href="#">Whiplash</a>
         
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+        <div class="collapse navbar-collapse " id="collapsibleNavId">
+            <ul  class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="home">Home</a>
+                    <a  class="nav-link fw-bold" routerLink="home">Home</a>
                 </li>
+                <li  class="nav-item">
+                    <a  class="nav-link fw-bold" routerLink="about">About</a>
+                </li>  
+                <li  class="nav-item">
+                    <a class="nav-link fw-bold" routerLink="cart">Cart</a>
+                </li>  
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="about">About</a>
-                </li>  <li class="nav-item">
-                    <a class="nav-link" routerLink="cart">Cart</a>
-                </li>  <li class="nav-item">
-                    <a class="nav-link" routerLink="products">Products</a>
-                </li>  <li class="nav-item">
-                    <a class="nav-link" routerLink="categories">Categories</a>
-                </li>  <li class="nav-item">
-                    <a class="nav-link" routerLink="brands">Brands</a>
+                    <a  class="nav-link fw-bold" routerLink="products">Products</a>
+                </li>  
+                <li  class="nav-item">
+                    <a class="nav-link fw-bold" routerLink="categories">Categories</a>
+                </li>  
+                <li  class="nav-item">
+                    <a  class="nav-link fw-bold" routerLink="brands">Brands</a>
                 </li>
             </ul>
         </div>
@@ -31,14 +35,14 @@
                     <i class="fab mx-2 fa-linkedin"></i>
                     <i class="fab mx-2 fa-youtube"></i>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="login">Login</a>
+                <li *ngIf="!isLogin" class="nav-item">
+                    <a  class="nav-link" routerLink="login">Login</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="signup">Sign Up</a>
+                <li *ngIf="!isLogin" class="nav-item">
+                    <a  class="nav-link" routerLink="signup">Sign Up</a>
                 </li> 
-                <li class="nav-item">
-                    <span class="nav-link">Log out</span>
+                <li *ngIf="isLogin" class="nav-item">
+                    <span  class=" cursor-pointer nav-link">Log out</span>
                 </li> 
             </ul>
     </div>
