--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
  @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300&display=swap ');
  :root
  {
-    --main-color:#0aad0a;
+    --main-color:#870aad;
     --light-color:#f0f3f2;
     --shadow:rgba(145,158,171,.2) 0px 2px 4px -1px, rgba(145,158,171,.14 )
     --font-family:'Encode Sans Expanded', sans-serif;
