--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,10 +5,10 @@
                 <img class="w-100" src={{product.imageCover}} alt="">
                 <h3 class="h6 fw-bold">{{product.title.split(' ').slice(0,2).join(' ')}}</h3>  
                 <div class="d-flex align-items-center justify-content-between">
-                    <span class="text-muted  fw-bold">{{product.price}} EGP</span>
+                    <span class=" fw-bold">{{product.price}} EGP</span>
                     <div>
                         <i class="fas fa-star rating-color"></i>
-                        <span class="text-muted  fw-bold">{{product.ratingsAverage}}</span>
+                        <span class="fw-bold">{{product.ratingsAverage}}</span>
                     </div>
                 </div>
                 <button class="btn bg-main text-white w-100 my-2">Add To Cart</button>
