--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,28 +2,26 @@
     <div class="container">
         <div>
             <img src="./assets/images/drum-logo.svg" alt="eCommerce HTML Template">
-        <a class="navbar-brand text-main fw-bold h1" href="#"> Whiplash</a>
+            <a class="navbar-brand text-main fw-bold h1" href="#"> Whiplash</a>
         </div>
-        
-        
         <div class="collapse navbar-collapse " id="collapsibleNavId">
             <ul  class="navbar-nav me-auto mt-2 mt-lg-0">
-                <li class="nav-item">
+                <li *ngIf="isLogin" class="nav-item">
                     <a  class="nav-link fw-bold" routerLink="home">Home</a>
                 </li>
-                <li  class="nav-item">
+                <li  *ngIf="isLogin" class="nav-item">
                     <a  class="nav-link fw-bold" routerLink="about">About</a>
                 </li>  
-                <li  class="nav-item">
+                <li  *ngIf="isLogin" class="nav-item">
                     <a class="nav-link fw-bold" routerLink="cart">Cart</a>
                 </li>  
-                <li class="nav-item">
+                <li *ngIf="isLogin" class="nav-item">
                     <a  class="nav-link fw-bold" routerLink="products">Products</a>
                 </li>  
-                <li  class="nav-item">
+                <li  *ngIf="isLogin" class="nav-item">
                     <a class="nav-link fw-bold" routerLink="categories">Categories</a>
                 </li>  
-                <li  class="nav-item">
+                <li  *ngIf="isLogin" class="nav-item">
                     <a  class="nav-link fw-bold" routerLink="brands">Brands</a>
                 </li>
             </ul>
@@ -44,7 +42,7 @@
                     <a  class="nav-link fw-bold" routerLink="signup">Sign Up</a>
                 </li> 
                 <li *ngIf="isLogin" class="nav-item">
-                    <span  class=" cursor-pointer nav-link">Log out</span>
+                    <span (click)="logOut()" class=" cursor-pointer nav-link">Log out</span>
                 </li> 
             </ul>
     </div>
