--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,14 +7,14 @@
 
         <!--<h2>{{ registerForm.get('name')?.getError('minlength') | json }}</h2>-->
 
-        <label for="email">email : </label>
+        <label for="email">Email : </label>
         <input formControlName="email" type="email" class="form-control mb-2" id="email">
         <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched" class="alert alert-danger">
             <p *ngIf="loginForm.get('email')?.getError('email')" class="m-0">Email InValid</p>
             <p *ngIf="loginForm.get('email')?.getError('required')" class="m-0">Email is Required</p>
         </div>
 
-        <label for="password">password : </label>
+        <label for="password">Password : </label>
         <input formControlName="password" type="password" class="form-control mb-2" id="password">
         <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched" class="alert alert-danger">
             <p *ngIf="loginForm.get('password')?.getError('pattern')" class="m-0"> password must start with upperCase then from 5 to 10 </p>
