--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
+<app-mainslider></app-mainslider>
+<app-categories></app-categories>
 <div class="row">
     <div *ngFor="let product of products" class="col-md-2">
         <div class="product px-2 py-4">
-            <a [routerLink]="['/productdetails']">
+            <a [routerLink]="['/productdetails',product._id]">
                 <span class="text-main fw-bold">{{product.category.name}}</span>
                 <img class="w-100" src={{product.imageCover}} alt="">
                 <h3 class="h6 fw-bold">{{product.title.split(' ').slice(0,2).join(' ')}}</h3>  
