--- a/src/app/theme/featuredproducts/featuredproducts.component.html
+++ b/src/app/theme/featuredproducts/featuredproducts.component.html
@@ -1,5 +1,8 @@
 <div class="row">
-    <div *ngFor="let product of products" class="col-md-2">
+    <div>
+        <input [(ngModel)]="searchTerm" type="text" placeholder="Search by Name ..." class="form-control w-75 mx-auto my-auto my-4" name="" id="">
+    </div>
+    <div *ngFor="let product of products|search:searchTerm" class="col-md-2">
         <div class="product px-2 py-4">
             <a [routerLink]="['/productdetails',product._id]">
                 <span class="text-main fw-bold">{{product.category.name}}</span>
