--- a/src/app/Pages/cart/cart.component.html
+++ b/src/app/Pages/cart/cart.component.html
@@ -1,1 +1,26 @@
-<p>cart works!</p>
+<div class="bg-main-light p-4 my-4">
+    <h3>Shop Cart</h3>
+    <h6 class="text-main">Total Price:{{cartDetails?.totalCartPrice}} EGP</h6>
+    <div *ngFor="let product of cartDetails?.products" class="row border-bottom py-3">
+        <div class="col-md-1">
+            <img class="w-100" [src]="product?.product?.imageCover" alt="">
+        </div>
+        <div class="col-md-11 d-flex justify-content-between">
+            <div>
+                <h6>{{product.product.title}}</h6>
+                <h6 class="text-main">Price:{{product.price}}</h6>
+                     <button (click)="removeItem(product.product._id)" class="btn m-0 p-0 "><i class="fa-regular text-main fa-trash-can"></i>Remove</button>
+            </div>
+           <div>
+                <button (click)="UpdateItem(product.product._id,product.count+1)" class="btn border-main btn-sm">+</button>
+                <span class="mx-2">{{product.count}}</span>
+                <button (click)="UpdateItem(product.product._id,product.count-1)" class="btn border-main btn-sm">-</button>
+           </div>
+        </div>
+    </div>
+    <button class=" btn my-3 bg-main text-white">
+        <a routerLink="/checkout">
+            Online Payment  <img src="assets/images/visa.svg" width="30px" height="30px">
+        </a>
+    </button>
+</div>
