rePassword validator fixed

--- a/src/app/Pages/signup/signup.component.html
+++ b/src/app/Pages/signup/signup.component.html
@@ -29,11 +29,12 @@
             <p *ngIf="registerForm.get('password')?.getError('required')" class="m-0">password is Required</p>
         </div>
 
-        <label for="rePassword">repassword : </label>
+        <label for="rePassword">rePassword : </label>
         <input formControlName="rePassword" type="password" class="form-control mb-2" id="repassword">
-        <div *ngIf="registerForm.get('repassword')?.errors && registerForm.get('password')?.touched" class="alert alert-danger">
-            <p *ngIf="registerForm.get('repassword')?.getError('pattern')" class="m-0"> repassword must start with upperCase then from 5 to 10 </p>
-            <p *ngIf="registerForm.get('repassword')?.getError('required')" class="m-0"> repassword is Required</p>
+        <div *ngIf="registerForm.get('rePassword')?.errors && registerForm.get('rePassword')?.touched" class="alert alert-danger">
+            <p *ngIf="registerForm.get('rePassword')?.getError('pattern')" class="m-0"> repassword must start with upperCase then from 5 to 10 </p>
+            <p *ngIf="registerForm.get('rePassword')?.getError('passwordmatch')" class="m-0">repassword doesn't rematch</p>
+            <p *ngIf="registerForm.get('rePassword')?.getError('required')" class="m-0"> repassword is Required</p>
         </div>
 
         <label for="phone">phone : </label>
